# ipipeline

./: README.md
src/ipipeline_core/: CMakeLists.txt  package.xml
src/ipipeline_core/include/ipipeline_core/: Config.h  IPLBarrier.h  IPLBinaryOperator.h  IPLBufferWriter.h  IPLCachingSource.h  IPLCheckFloat.h  IPLConditions.h  IPLCvImageSource.h  IPLDelayedImage.h  IPLDemux.h  IPLDriver.h  IPLExternalImageSource.h  IPLGenericProbe.h  IPLGenericProbeFactory.h  IPLIPScheduler.h  IPLIPScheduler1T.h  IPLIPScheduler1Tstatic.h  IPLIPSchedulerMT.h  IPLImageFilter.h  IPLImageProcessor.h  IPLImageSaver.h  IPLImageSource.h  IPLImageSourceWithView.h  IPLMultiImageSource.h  IPLProbeCommon.h  IPLStructs.h
src/ipipeline_core/src/: IPLBarrier.cpp  IPLBinaryOperator.cpp  IPLBufferWriter.cpp  IPLCachingSource.cpp  IPLCheckFloat.cpp  IPLCvImageSource.cpp  IPLDelayedImage.cpp  IPLDemux.cpp  IPLDriver.cpp  IPLExternalImageSource.cpp  IPLGenericProbe.cpp  IPLIPScheduler.cpp  IPLIPScheduler1T.cpp  IPLIPScheduler1Tstatic.cpp  IPLIPSchedulerMT.cpp  IPLImageFilter.cpp  IPLImageProcessor.cpp  IPLImageSaver.cpp  IPLImageSource.cpp  IPLImageSourceWithView.cpp  IPLMultiImageSource.cpp
src/ipipeline_core/src/config/: Config.cpp  config.lex  config.output  config.tab.cpp  config.tab.hpp  config.y  lex.config.cpp
src/ipipeline_core/test/: IPLTest.cfg  IPLTest.cpp  IPLTestDriver.cpp  IPLTestDriver.h  test.cfg  testapp.cpp  testcfg.cpp
src/ipipeline_io/: CMakeLists.txt  package.xml
src/ipipeline_io/include/ipipeline_io/: IPLGenericRosPublisher.h  IPLGenericRosSubscriber.h  IPLMultiArrayRosPublisher.h  IPLRosImageTransportPublisher.h  IPLRosImageTransportSubscriber.h  IPLRosMessageTransportPublisher.h  IPLRosMessageTransportSubscriber.h  IPLRosProbe.h  IPLRosProbeFactory.h  IPLRosPublisher.h  IPLRosSubscriber.h
src/ipipeline_io/msg/: ProbeCommand.msg  ProbeStatus.msg
src/ipipeline_io/msg/lisp/ipipeline_io/: ipipeline_io-msg.asd
src/ipipeline_io/src/: IPLGenericRosPublisher.cpp  IPLGenericRosSubscriber.cpp  IPLMultiArrayRosPublisher.cpp  IPLRosProbe.cpp  tmp.cpp
src/ipipeline_io/test/: IPLTest.cfg  IPLTest.cpp  IPLTestDriver.cpp  IPLTestDriver.h
src/ipipeline_modules/: CMakeLists.txt  package.xml
src/ipipeline_modules/include/ipipeline_modules/: IPL8bNormalizer.h  IPLCannyEdges.h  IPLCenterDependantModule.h  IPLCircularGaussian.h  IPLCircularGradientRef.h  IPLCircularMask.h  IPLCircularPhaseFilter.h  IPLDepthConvert.h  IPLDrawCross.h  IPLFilteredGradMagnitude.h  IPLGlcmMask.h  IPLGradientPhase.h  IPLGradientPolar.h  IPLImageAbs.h  IPLImageAdd.h  IPLImageAnd.h  IPLImageBlurrer.h  IPLImageDiff.h  IPLImageDilater.h  IPLImageDiv.h  IPLImageEqualise.h  IPLImageEroder.h  IPLImageGradient.h  IPLImageMax.h  IPLImageMin.h  IPLImageMul.h  IPLImageROI.h  IPLImageResizer.h  IPLImageRotater.h  IPLImageSqr.h  IPLImageSqrt.h  IPLImageToGray.h  IPLLocalMax.h  IPLMatrixSaver.h  IPLMedianFilter.h  IPLOptFlowLK.h  IPLRoiFuser.h  IPLSobelEdges.h  IPLThresholder.h  IPLTranslateCenter.h  (+2 more)
src/ipipeline_modules/src/: IPL8bNormalizer.cpp  IPLCannyEdges.cpp  IPLCircularGaussian.cpp  IPLCircularGradientRef.cpp  IPLCircularMask.cpp  IPLCircularPhaseFilter.cpp  IPLDepthConvert.cpp  IPLDrawCross.cpp  IPLFilteredGradMagnitude.cpp  IPLGlcmMask.cpp  IPLGradientPhase.cpp  IPLGradientPolar.cpp  IPLImageAbs.cpp  IPLImageAdd.cpp  IPLImageAnd.cpp  IPLImageBlurrer.cpp  IPLImageDiff.cpp  IPLImageDilater.cpp  IPLImageDiv.cpp  IPLImageEqualise.cpp  IPLImageEroder.cpp  IPLImageGradient.cpp  IPLImageMax.cpp  IPLImageMin.cpp  IPLImageMul.cpp  IPLImageROI.cpp  IPLImageResizer.cpp  IPLImageRotater.cpp  IPLImageSqr.cpp  IPLImageSqrt.cpp  IPLImageToGray.cpp  IPLLocalMax.cpp  IPLMatrixSaver.cpp  IPLMedianFilter.cpp  IPLOptFlowLK.cpp  IPLRoiFuser.cpp  IPLSobelEdges.cpp  IPLThresholder.cpp  IPLTranslateCenter.cpp  IPLUnwarper.cpp  (+7 more)
src/ipipeline_modules/test/: IPLTest.cfg  IPLTestDriver.cpp  IPLTestDriver.h
src/ipipeline_ssl/: CMakeLists.txt  package.xml
src/ipipeline_ssl/include/ipipeline_ssl/: IPLSSLImage.h  IPLSSLScale.h  SSL.h  SSLDetector.h
src/ipipeline_ssl/src/: IPLSSLImage.cpp  IPLSSLScale.cpp  SSLDetector.cpp
src/ipipeline_ssl/test/: IPLTest.cfg  IPLTest.cpp  IPLTestDriver.cpp  IPLTestDriver.h  IPLTestRos.cfg
src/ipipeline_template/: CMakeLists.txt  package.xml
src/ipipeline_template/include/ipipeline_template/: IPLMyProcessor.h
src/ipipeline_template/nodes/: IPLTest.cfg  IPLTest.cpp  IPLTestDriver.cpp  IPLTestDriver.h
src/ipipeline_template/src/: IPLMyProcessor.cpp
src/ipipeline_view/: CMakeLists.txt  package.xml
src/ipipeline_view/src/: image_view.cpp  sdlprobe.cpp
